# ubex_autoapi

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  gunicorn.conf.py  manage.py  pyproject.toml  setup.cfg
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_pizza.py
api/templates/: swagger-ui.html
project/: settings.py  urls.py  views.py  wsgi.py
